@@ -667,9 +667,9 @@ void bridge__packet_cleanup(struct mosquitto *context);
 /* ============================================================
  * Property related functions
  * ============================================================ */
-int property__process_connect(struct mosquitto *context, mosquitto_property *props);
-int property__process_will(struct mosquitto *context, struct mosquitto_message_all *msg, mosquitto_property *props);
-int property__process_disconnect(struct mosquitto *context, mosquitto_property *props);
+int property__process_connect(struct mosquitto *context, mosquitto_property **props);
+int property__process_will(struct mosquitto *context, struct mosquitto_message_all *msg, mosquitto_property **props);
+int property__process_disconnect(struct mosquitto *context, mosquitto_property **props);
 
 /* ============================================================
  * Security related functions
